@@ -4,7 +4,6 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import no.nav.registre.sdforvalter.database.model.TagModel;
 import no.nav.registre.sdforvalter.database.model.TpsIdentTagModel;
@@ -26,6 +25,6 @@ public class TpsIdentTagAdapter {
                 .findAllByIdent(ident)
                 .stream()
                 .map(TpsIdentTagModel::getTag)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
