@@ -30,7 +30,6 @@ import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.Executor;
 import java.util.concurrent.Executors;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Component
@@ -79,7 +78,7 @@ public class PersonConsumer {
     public List<Person> hentPersoner(Set<String> identer) {
         AccessToken accessToken = tokenExchange.exchange(serviceProperties).block();
         List<Person> personer = new ArrayList<>();
-        var futures = identer.stream().map(ident -> hentPerson(ident, accessToken)).collect(Collectors.toList());
+        var futures = identer.stream().map(ident -> hentPerson(ident, accessToken)).toList();
         for (CompletableFuture<Person> future : futures) {
             try {
                 Person person = future.get();
@@ -102,7 +101,7 @@ public class PersonConsumer {
                         return null;
                     }
                 }, executor)
-        ).collect(Collectors.toList());
+        ).toList();
 
         List<TpsIdent> opprettedeIdenter = futures.stream().map(future -> {
             try {
@@ -111,7 +110,7 @@ public class PersonConsumer {
                 log.error("Noe gikk galt ved henting av resultat fra tråd", e);
                 return null;
             }
-        }).collect(Collectors.toList());
+        }).toList();
 
         if (opprettedeIdenter.stream().anyMatch(Objects::isNull)) {
             throw new UgyldigIdentException("Klarte ikke å opprette alle identer");
